Fixed serial model; fixed CI script

--- a/.github/workflows/node-release.yaml
+++ b/.github/workflows/node-release.yaml
@@ -70,25 +70,18 @@ jobs:
         echo "tag: '${{ github.event.release.tag_name }}'"
         echo "default: '${{ env.default }}'"
         cd pcb
-        sed -i "s!<<hash>>!${COMMIT}!" Node.kicad_pcb
-        sed -i "s!<<hash>>!${COMMIT}!" Node.kicad_sch
-        sed -i "s!<<release-date>>!${RELEASE_DATE}!" Node.kicad_pcb
-        # sed -i "s!<<release-date>>!${RELEASE_DATE}!" Node.kicad_sch
+        sed -i "s!<<hash>>!${COMMIT}!" *.kicad_pcb
+        sed -i "s!<<hash>>!${COMMIT}!" *.kicad_sch
+        sed -i "s!<<release-date>>!${RELEASE_DATE}!" *.kicad_pcb
         sed -i "s!<<release-date>>!${RELEASE_DATE}!" *.kicad_sch
-        # sed -i "s!<<release-date>>!${RELEASE_DATE}!" requirements.kicad_sch
-        # sed -i "s!<<release-date>>!${RELEASE_DATE}!" mcu.kicad_sch
-        # sed -i "s!<<release-date>>!${RELEASE_DATE}!" peripherals.kicad_sch
-        # sed -i "s!<<release-date>>!${RELEASE_DATE}!" pio.kicad_sch
-        # sed -i "s!<<release-date>>!${RELEASE_DATE}!" power.kicad_sch
 
     # Remove tag from PCB since this is not a release
     - name: Update the PCB build with git hash
       if: github.event_name != 'release'
       run: |
         cd working/aquarius-hw/pcb
-        sed -i "s!<<tag>>!MANUAL!" Node.kicad_pcb
+        sed -i "s!<<tag>>!MANUAL!" *.kicad_pcb
         sed -i "s!<<tag>>!MANUAL!" *.kicad_sch
-        # sed -i "s!<<tag>>!MANUAL!" Node.kicad_sch
 
     # Update PCB with release tag
     - name: Update the PCB release with git hash and version tag
@@ -97,14 +90,8 @@ jobs:
         cd working/aquarius-hw/pcb
         echo "tag: ${{ github.ref_name }}"
         echo "release tag: ${{ github.event.release.tag_name }}"
-        sed -i "s!<<tag>>!${{ github.event.release.tag_name }}!" Node.kicad_pcb
-        # sed -i "s!<<tag>>!${{ github.event.release.tag_name }}!" Node.kicad_sch
+        sed -i "s!<<tag>>!${{ github.event.release.tag_name }}!" *.kicad_pcb
         sed -i "s!<<tag>>!${{ github.event.release.tag_name }}!" *.kicad_sch
-        # sed -i "s!<<tag>>!${{ github.event.release.tag_name }}!" requirements.kicad_sch
-        # sed -i "s!<<tag>>!${{ github.event.release.tag_name }}!" mcu.kicad_sch
-        # sed -i "s!<<tag>>!${{ github.event.release.tag_name }}!" peripherals.kicad_sch
-        # sed -i "s!<<tag>>!${{ github.event.release.tag_name }}!" pio.kicad_sch
-        # sed -i "s!<<tag>>!${{ github.event.release.tag_name }}!" power.kicad_sch
 
     # generates fab files for the single PCB, includes gerber, drill, ibom, schematic, and images
     # NOTE: only run if this is not a release (e.g., run manually)
